<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">

        <LinearLayout
            android:id="@+id/pagination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="17dp"
                android:background="@color/scarlet"
                android:paddingHorizontal="10dp"
                android:text="@string/prev"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/scarlet"
                android:paddingHorizontal="10dp"
                android:text="@string/next"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/scarlet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbAppbar">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/input_find"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnFind"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/scarlet"
                android:paddingHorizontal="10dp"
                android:text="@string/button_find"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:gravity="top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLayout">

            <GridView
                android:id="@+id/gvMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="5dp"
                android:numColumns="2"
                android:verticalSpacing="5dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu"/>
</androidx.drawerlayout.widget.DrawerLayout>